appId: com.anonymous.duolingoknockoff
---
- launchApp
- tapOn:
      id: "local-language-selector"
- tapOn: "Deutsch"
- assertVisible: "Deutsch"
