appId: com.anonymous.duolingoknockoff
---
- launchApp
- tapOn: "Profile"
- scroll
- tapOn: "Log out"
- assertVisible: "GET STARTED"
