appId: com.anonymous.duolingoknockoff
---
- launchApp
- tapOn: "Home"
- tapOn: "Perfect for beginners!"
- assertVisible: "Go back"